4.0.4 -> 4.0.5:
	- bump rpm/popt versions, hardwire 4.0.4 in libraries.
	- link rpm libraries together, move symbols to achieve forward linkage.
	- use db-4.1.25, not db-4.0.14, internally.
	- add rpmdb_loadcvt script, rpmdb_foo utilities.
	- use current autotools,
	- use splint, not lclint.
	- delete rpm-4.1 header-only signatures/digests when signing.

4.0.3 -> 4.0.4:
	- turn off rpm-perl until it's self-hosting.
	- jigger up rpm-python with python-2.2b2 for now.
	- remove libtoolize from %%configure for now (#57039).
	- teach find-requires to autogenerate GCC_3.0 dependencies.
	- solaris: translate i86pc to i386 (#57182).
	- fix: %GNUconfigure breaks with single quotes (#57264).
	- look for PY_VERSION 2.2c1.
	- fix: typo in find-requires.
	- tru64 compiler message cleanup.
	- add buildarch lines for hppa (#57728).
	- sparc: make dbenv per-rpmdb, not per-dbi.
	- handle lazy db open's in chroot with absolute path, not prefix strip.
	- Depends should use CDB if configured.
	- autodetect python 1.5/2.2.
	- use db-4.0.14 final internally.
	- make rpm-perl package self-hosting (#57748).
	- permit gpg/pgp/pgp5 execs to be reconfigured.
	- fix: signing multiple times dinna work, discard immutable region.
	- remove poptmodule.so for separate packaging.
	- permit subset installs for %lang colored hardlink file sets.
	- missing key(s) on keyring when verifying a signature is now an error.
	- remove dependency whiteout.
	- calculate rpm-4.1 ordering/orientation metrics in rpmdepOrder().
	- use beecrypt routines to calculate digests in rpm.
	- dump legacy support for broken md5 signatures.
	- sync popt and rpmio with rpm-4.1, rpmio has OpenPGP API.
	- sync rpmdb and build with rpm-4.1, lots of splint annotations.
	- add :armor and :base64 query format qualifiers for binary signatures.
	- fix: query format qualifiers needed header.c merge.
	- ppc64 arch added (#58634,#58636).
	- turn on auto-generated perl requirements (#58519, #58536, #58537).